fixed: allow all overflow (not a real fix), https://github.com/kobotoolbox/enketo-express/issues/290

--- a/src/sass/core/_layout.scss
+++ b/src/sass/core/_layout.scss
@@ -18,7 +18,6 @@ body {
     border: 7px solid #ddd;
     position: relative;
     min-height: 100%;
-    overflow: hidden;
 }
 
 .or {
